--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-<!--Common strings which are used in multiple activities-->
+    <!--Common strings which are used in multiple activities-->
     <string name="app_name">Mrgs Management App</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
@@ -23,7 +23,7 @@
     <!--    <string name="next">Next</string>-->
     <!--    <string name="previous">Previous</string>-->
 
-<!--These strings are used in forgot password activity-->
+    <!--These strings are used in forgot password activity-->
     <string name="forgot_password_info">
         Forgot your password? Do not worry! Please enter your email address below!
     </string>
@@ -33,14 +33,18 @@
     <string name="reset_password">Reset Password</string>
     <string name="go_back">Return back to login page?</string>
 
-<!--These strings are used in update data, retrieved layout and input file-->
+    <!--These strings are used in update data, retrieved layout and input file-->
     <string name="update_task">Update your task</string>
     <string name="task">Task</string>
     <string name="description">Description</string>
     <string name="delete">Delete</string>
     <string name="update">Update</string>
-    <string name="date">June 18, 2020</string>
+    <string name="date">Date</string>
     <string name="new_task">Add a new task</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
+
+    <string name="return2">Return back to main interface</string>
+    <string name="backward"><![CDATA[<-]]></string>
+    <string name="forward"><![CDATA[->]]></string>
 </resources>
