--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="return2">Return back to main interface</string>
     <string name="backward"><![CDATA[<-]]></string>
     <string name="forward"><![CDATA[->]]></string>
+    <string name="weekly">Weekly</string>
 </resources>
