--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,8 +44,9 @@
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
 
-    <string name="return2">Return back to main interface</string>
+<!--    <string name="return2">Return back to main interface</string>-->
     <string name="backward"><![CDATA[<-]]></string>
     <string name="forward"><![CDATA[->]]></string>
     <string name="weekly">Weekly</string>
+    <string name="new_event">New Event</string>
 </resources>
