Weekly calendar added but still need to fix date and time in it... Still need to fix List view... Still need to Link List view with Auth... Still need to be able to delete or edit events... Still need to be able to show the users their events for specific dates perfectly... Still need to fix remember me button, still need to fix the functionality of the Login and Log out... Still need to add past papers web view... Still need to add time in to do list part which lets the user select the time & Still need to add date and time picker in events...

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="forward"><![CDATA[->]]></string>
     <string name="weekly">Weekly</string>
     <string name="new_event">New Event</string>
+    <string name="name_of_the_event">Name of the event:</string>
 </resources>
