--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,6 @@
     <string name="weekly">Weekly</string>
     <string name="new_event">New Event</string>
     <string name="name_of_the_event">Name of the event:</string>
+    <string name="event">Event</string>
+    <string name="time">Select Time</string>
 </resources>
