String sentences improved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,9 +43,9 @@
     <string name="to_do_help_1">1) You can simply tap on the floating button on bottom right of the screen to add a new task.</string>
     <string name="to_do_help_2">2) You can enter your task and description in task and description fields.</string>
     <string name="to_do_help_3">3) Then you can either save your task or cancel your task.</string>
-    <string name="to_do_help_4">4) If you want, you could later edit or delete your task! This will help you manage your time well!</string>
-    <string name="to_do_help_5">5) You can start this simply by clicking on the button below. This button will redirect you to your to do lists</string>
-    <string name="to_do_how_to">How to use To do list</string>
+    <string name="to_do_help_4">4) If you want, you could later edit or delete your task! This will help you manage your time well.</string>
+    <string name="to_do_help_5">5) You can start this simply by clicking on the button below. This button will redirect you to your to do lists.</string>
+    <string name="to_do_how_to">How to use To do list.</string>
 
     <!--These strings are used in planner section of my application-->
     <string name="backward"><![CDATA[<-]]></string>
@@ -65,25 +65,25 @@
     <string name="saturday">SAT</string>
 
     <!--These strings are also used in planner section (planner fragment) of my application-->
-    <string name="planner_how_to">How to use planner</string>
-    <string name="planner_help_1">1) Once you click on the planning button below, it will direct you to a calendar</string>
-    <string name="planner_help_2">2) On this calendar, you can choose the date you want to add an event</string>
-    <string name="planner_help_3">3) You can click on the arrow keys to switch between months. Once you have chosen the date, you can click on weekly button in top center which takes you to weekly calendar</string>
-    <string name="planner_help_4">4) This weekly calendar can be used similarly to switch between weeks. You can click on new event button which takes you to a new page where you can add an event</string>
-    <string name="planner_help_5">5) Once you have named your event, you can simply choose time and click save</string>
+    <string name="planner_how_to">How to use planner.</string>
+    <string name="planner_help_1">1) Once you click on the planning button below, it will direct you to a calendar.</string>
+    <string name="planner_help_2">2) On this calendar, you can choose the date you want to add an event.</string>
+    <string name="planner_help_3">3) You can click on the arrow keys to switch between months. Once you have chosen the date, you can click on weekly button in top center which takes you to weekly calendar.</string>
+    <string name="planner_help_4">4) This weekly calendar can be used similarly to switch between weeks. You can click on new event button which takes you to a new page where you can add an event.</string>
+    <string name="planner_help_5">5) Once you have named your event, you can simply choose time and click save.</string>
 
     <!--These strings are used in about us section (about us activity) of my application-->
-    <string name="about_info">Our social media websites you could check out!</string>
-    <string name="school_info">Hello there! This is our school website. Just click on our sursum logo and it will direct you to our school website!</string>
-    <string name="kamar_info">This is our kamar portal where you can always check your results and pathways. Click on the logo to go to kamar login!</string>
-    <string name="nzqa_info">This is NZQA website. It will direct you to nzqa login where senior students can check their grades!</string>
+    <string name="about_info">Our social media websites you could check out.</string>
+    <string name="school_info">Hello there! This is our school website. Just click on our sursum logo and it will direct you to our school website.</string>
+    <string name="kamar_info">This is our kamar portal where you can always check your results and pathways. Click on the logo to go to kamar login.</string>
+    <string name="nzqa_info">This is NZQA website. It will direct you to nzqa login where senior students can check their grades.</string>
 
     <!--These strings are also used in about us section (about us fragment) of my application-->
     <string name="about_us">About us</string>
     <string name="about_help_1">1) When the about us button is clicked, a new page opens where you can find several ways to contact us.</string>
     <string name="about_help_2">2) When one of those logo is clicked, it takes you to our page where you can find different things.</string>
-    <string name="about_help_3">3) 1st one takes you to MRGS website</string>
-    <string name="about_help_4">4) 2nd one takes you to Kamar Portal</string>
-    <string name="about_help_5">5) 3rd one takes you to nzqa website</string>
-    <string name="about_help_6">6) The bottom ones are our social media where you can contact us</string>
+    <string name="about_help_3">3) 1st one takes you to MRGS website.</string>
+    <string name="about_help_4">4) 2nd one takes you to Kamar Portal.</string>
+    <string name="about_help_5">5) 3rd one takes you to nzqa website.</string>
+    <string name="about_help_6">6) The bottom ones are our social media where you can contact us.</string>
 </resources>
