Added in copyright on splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="about_help_4">4) This second link takes you to Kamar Portal.</string>
     <string name="about_help_5">5) This third link takes you to nzqa website.</string>
     <string name="about_help_6">6) The bottom ones are our social media where you can contact us.</string>
+    <string name="copyright">© 2021 | Designed by Ausaaf Mohammed</string>
 </resources>
