--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,4 +83,21 @@
     <string name="about_help_5">5) This third link takes you to nzqa website.</string>
     <string name="about_help_6">6) The bottom ones are our social media where you can contact us.</string>
     <string name="copyright">© 2021 | Designed by Ausaaf Mohammed</string>
+    <string name="library">Library</string>
+    <string name="profile">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_library">LibraryActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="book_cover">Book Cover</string>
+    <string name="title">Title</string>
+    <string name="author">Author</string>
+    <string name="status">Status</string>
 </resources>
